tests/error/poly_errors/non_linear3.err
Guppy compilation failed. Error in file $FILE:25

23:    @guppy(module)
24:    def main() -> None:
25:        foo(h)
               ^
GuppyTypeError: Expected argument of type `?T -> None`, got `qubit -> None`
